--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,13 @@ server.port=8080
 # To enable MongoDB Debugging to get more detailed information.
 logging.level.org.mongodb.driver=DEBUG
 
+#logging.file.name=logs/airline-ticketing-system.log
 
+# Set logging level to DEBUG for specific packages
+#logging.level.com.rishi.airline=DEBUG
 
+# Set logging level to INFO globally
+logging.level.root=INFO
+
+# Customize logging output format (optional)
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
